[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=1]
[ext_resource path="res://Menus/resources/Header_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/resources/dark_w.png" type="Texture" id=3]
[ext_resource path="res://new_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Menus/resources/btn_texture2.png" type="Texture" id=5]
[ext_resource path="res://Menus/resources/light_b.png" type="Texture" id=6]
[ext_resource path="res://Menus/Lobby/GameModes.gd" type="Script" id=7]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Menus/resources/btn_texture3.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 8 )

[node name="GameModes" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="TextureRect"]
margin_left = 91.0885
margin_top = 597.568
margin_right = 216.088
margin_bottom = 642.568
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect/back"]
margin_left = 29.1122
margin_top = 6.84009
margin_right = 92.1122
margin_bottom = 33.8401
custom_fonts/font = SubResource( 1 )
text = "BACK"

[node name="header" type="Label" parent="TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -233.307
margin_top = 5.27429
margin_right = 208.693
margin_bottom = 107.274
custom_fonts/font = ExtResource( 2 )
text = "Game Modes"

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 294.888
margin_top = 140.322
margin_right = 943.888
margin_bottom = 582.322
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FFA" type="TextureButton" parent="TextureRect/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_right = 649.0
margin_bottom = 75.0
rect_min_size = Vector2( 200, 75 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/FFA"]
margin_left = 104.211
margin_top = -6.31583
margin_right = 497.211
margin_bottom = 77.6842
custom_fonts/font = ExtResource( 4 )
text = "Free For All"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TDM" type="TextureButton" parent="TextureRect/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 115.0
margin_right = 649.0
margin_bottom = 190.0
rect_min_size = Vector2( 200, 75 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/TDM"]
margin_left = 132.771
margin_top = -11.0759
margin_right = 525.771
margin_bottom = 72.9241
custom_fonts/font = ExtResource( 4 )
text = "Team DM"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZM" type="TextureButton" parent="TextureRect/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.588235 )
margin_top = 230.0
margin_right = 649.0
margin_bottom = 305.0
rect_min_size = Vector2( 200, 75 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect/VBoxContainer/ZM"]
margin_left = 55.0239
margin_top = -12.6625
margin_right = 599.024
margin_bottom = 71.3375
custom_fonts/font = ExtResource( 4 )
text = "Zombie Survival"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="TextureRect/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/FFA" to="." method="_on_FFA_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/TDM" to="." method="_on_TDM_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ZM" to="." method="_on_ZM_pressed"]
